--- a/documents/プログラム仕様書.md
+++ b/documents/プログラム仕様書.md
@@ -1,4 +1,4 @@
-## データベース構造
+# データベース構造
 
 ```
 class
@@ -19,3 +19,9 @@ attend
                 status : num
                 remarks : str
 ```
+
+# 関数
+## addStudnet
+### 構文
+### 引数
+### 返り値
