ページ構成の整備

--- a/documents/プログラム仕様書.md
+++ b/documents/プログラム仕様書.md
@@ -20,6 +20,17 @@ attend
                 remarks : str
 ```
 
+# ページ構成
+```
+トップページ
+
+ログインページ
+
+集計ページ
+
+入力ページ
+```
+
 # 関数
 ## addStudnet
 ### 構文
